Fixed collapsed sidebar menu height issue, the bottom padding was too large.
Fixed calendar pop-up on mobile devices was hidden behind sidebar menu by adding padding to the container div.

--- a/KinaUnaWeb/wwwroot/css/site.css
+++ b/KinaUnaWeb/wwwroot/css/site.css
@@ -2918,6 +2918,8 @@ input-group.e-control-wrapper:not(.e-float-icon-left):not(.e-float-input)::after
         margin-top: 130px;
         background: #ffffff;
         height: 85vh;
+        padding-left: 80px;
+        padding-top: 15px;
     }
 
 button.Zebra_DatePicker_Icon {
@@ -3093,9 +3095,7 @@ button.Zebra_DatePicker_Icon {
     }
 
     .e-quick-popup-wrapper.e-device > .e-event-popup {
-        margin-top: 130px;
         background: #262426;
-        height: 85vh;
     }
 
     .form-control-noline {
